fixing contrast issues

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -195,6 +195,7 @@ ABOUT.HTML
     margin: 30px auto;
     text-align: center;
     border: 3px solid black;
+    background-color: #6e826d;;
 }
 
 .history > * {
@@ -219,13 +220,14 @@ ABOUT.HTML
 .history p {
     font-size: 18px;
     margin: 70px 35px 10px 35px;
-    color: #ccdce2;
+    color: #000000;
 }
 
 .adventures {
     border: solid 3px black;
     width: 80%;
     margin: 30px auto;
+    background-color: #6e826d;;
 }
 
 #about-image-container {
@@ -250,7 +252,7 @@ ABOUT.HTML
 
 figcaption {
     font-size: 20px;
-    color: #ccdce2;
+    color: #defbf1;
     
 }
 
@@ -522,6 +524,7 @@ INDEX HTML///////
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    background-color: black;
     filter: blur(8px);
     z-index: -1;
     mask-image: linear-gradient(to bottom, 
@@ -567,7 +570,7 @@ INDEX HTML///////
 
 .index-button-style {
     text-decoration: none;
-    background-color: #009688; 
+    background-color: #1a8378; 
     color: #ffffff; 
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 20px;
@@ -587,13 +590,13 @@ INDEX HTML///////
 }
 
 .index-button-style:hover {
-    background-color: #00796b;
+    background-color: #03564c;
     border:#48f6e562 1px solid;
 }
 
 .index-button-style:focus {
     border: 0;
-    background-color: #14c7b2;
+    background-color: #26aa9a;
 }
 
 /* whole bottom section */
@@ -617,6 +620,7 @@ INDEX HTML///////
     padding: 20px 0px 20px 0px;
     align-items: center;
     height: 100%;
+    background-color: black;
 }
 
 
@@ -631,12 +635,15 @@ INDEX HTML///////
     grid-column: 2; 
     grid-row: 2/4;
     height: 100%;
+    background-color: black;
+
 } 
 
 .index-subscribe-label {    
     grid-column: 1;
     justify-self: center;
     align-self: center;
+    background-color: black;
 }
 
 .index-input-style {
@@ -664,12 +671,14 @@ INDEX HTML///////
 
 #index-info-container {
     grid-column: 2;
+    background-color: black;
 
 }
 
 #index-info-container2 {
     grid-column: 3;
     margin-right: 20px;
+    background-color: black;
 }
 
 #index-subelement {
@@ -768,7 +777,7 @@ tbody > tr:nth-of-type(even) {
     grid-row: 12;
     justify-content: space-between;
     text-align: center;
-
+    background-color: #6e826d;
 }
 
 #trips-info-section img {
